fix(feature-card): update icon alignment

--- a/packages/web-components/src/components/feature-card/feature-card.scss
+++ b/packages/web-components/src/components/feature-card/feature-card.scss
@@ -45,7 +45,7 @@ $feature-flags: (
 :host(#{$dds-prefix}-feature-card[size='large']) {
   ::slotted(#{$dds-prefix}-feature-card-footer) {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
 
     @include breakpoint(xlg) {
       justify-content: flex-end;
@@ -56,7 +56,7 @@ $feature-flags: (
 :host(#{$c4d-prefix}-feature-card-footer),
 :host(#{$c4d-prefix}-feature-cta-footer) {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
 
   @include breakpoint(md) {
     justify-content: flex-end;
